# thermal-printer-api

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  dev.py  main.py  printer-config.json  pyproject.toml
server/: index.js  package-lock.json  package.json  printer-config.json
server/routes/: printer.js
server/scripts/: printer.js
thermal_printer_api/: __init__.py  config.py  main.py  models.py  printer.py  routes.py
