[project]
name = "thermal-printer-api"
version = "2.0.0"
description = "Local REST API for thermal printer management"
authors = [
    {name = "Christian Serra"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-escpos[usb]>=3.0.0",
    "qrcode[pil]>=7.4.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.32.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "ISC"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
thermal-printer-api = "thermal_printer_api.main:start_server"
thermal-printer-api-dev = "thermal_printer_api.main:start_dev_server"
